[package]
name = "github-discord-transformer"
version = "0.1.0"
authors = ["ReVanced", "Sculas <contact@sculas.xyz>"]
edition = "2024"

[dependencies]
vercel_runtime = { version = "2", features = ["axum"] }
http = "1.4"
reqwest = { version = "0.13", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
hmac-sha256 = "1.1"
hex = "0.4"

[[bin]]
name = "github"
path = "api/github.rs"
