[package]
name = "github-sponsors-discord-webhook"
version = "0.1.0"
authors = ["ReVanced"]
edition = "2024"

[dependencies]
vercel_runtime = { version = "2" }
http = "1.4"
serde = "1.0"
serde_json = "1.0"
hmac-sha256 = "1.1"
hex = "0.4"
discord-webhook2 = "0.4.3"

[[bin]]
name = "main"
path = "api/main.rs"
